--- a/css/file.css
+++ b/css/file.css
@@ -17,11 +17,11 @@
   color: #ffffff;
   padding: 15px;
   margin-bottom: 20px;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .menupro {
-  background-color: white;
+  background-color: #f2f2f2;
 }
 
 .menuh {
@@ -46,10 +46,12 @@
   font-size: 20px;
 }
 .menuh .signup {
-  border: 2px solid gray;
+  border: 3px solid white;
   text-align: center;
+  color: white;
   background-color: transparent;
   border-radius: 7px;
+  opacity: 0.5;
 }
 .menuh .signupba {
   border: 2px solid gray;
@@ -57,6 +59,7 @@
   text-align: center;
   background-color: transparent;
   border-radius: 7px;
+  opacity: 0.5;
 }
 .menuh .signupbc {
   border: 2px solid gray;
@@ -64,86 +67,27 @@
   text-align: center;
   background-color: #170a8b;
   border-radius: 7px;
+  opacity: 0.5;
 }
 
-.menucreate {
-  font-size: 1em;
-  color: black-500;
-}
-.menucreate .signupb {
-  padding: 10px;
-  margin-right: 5px;
-}
-.menucreate .signupb {
-  padding: 10px;
-  margin-right: 5px;
-}
-
-/* .navbar{
- //  border: 1px solid black;
-   height: 300px;
-   margin:10px 90px 10px 90px;
-   .navT{
-       margin:10px 10px 10px 10px;
-       //margin-left: 30px;
-      // margin-right: 30px;
-      // border: 2px solid red;
-       height: 150px;
-       display: flex;
-       gap: 20px;
-       .navl{
-           ul {
-               list-style-type: none;
-               margin: 0;
-               padding: 0;
-               overflow: hidden;
-           }
-
-           li {
-               float: left;
-           }
-
-           li a {
-               display: block;
-               color:  white;      //solid #9933cc;
-               text-align: center;
-               padding: 14px 16px;
-               text-decoration: none;
-           }
-           li a:hover {
-               background-color: red;
-               color: white;
-           }
-           .topnav-right {
-               float: right;
-           }
-       }
-
-      /* a{
-           font-size: 10px;
-           color:rebeccapurple ;
-           display: inline-block;
-           text-align: center;
-           justify-content: space-between;
-       }
-       .guide{
-
-           margin:Opx 50px 0px 50px;
-       }//
-
-
-   }
- }*/
 .menup {
   border-radius: O 5px 5px Opx;
 }
-.menup img {
-  object-fit: contain;
+.menup .menupimg {
+  border-top: 2px solid rgba(167, 156, 156, 0.8);
+  border-left: 2px solid rgba(167, 156, 156, 0.8);
+  border-right: 2px solid rgba(167, 156, 156, 0.8);
+  border-radius: 5px 5px 0px 2px;
+  box-shadow: 0px grey;
+}
+.menup .menupimg img {
+  object-fit: fill;
+  margin: 0 auto;
 }
 .menup .menupa {
   border: 1px solid rgb(167, 162, 162);
   padding: 0 auto;
-  box-shadow: 0px 3px 3px 2px grey;
+  box-shadow: 0px 3px 3px 0px grey;
   border-radius: 0px 0px 5px 5px;
 }
 
@@ -151,18 +95,26 @@
   color: black;
   text-align: center;
   padding: 0px;
+  background-color: white;
 }
 
-.imgp {
+.productf {
+  color: black;
+  text-align: center;
+  padding: 0px;
+}
+
+/*.imgp{
   float: left;
   width: 100%;
   padding: 0px;
-}
-.imgp img {
-  width: 100%;
-  object-fit: contain;
-}
+  //border: 1px solid black;
 
+  img{
+      width: 100%;
+      object-fit: contain;
+  }
+}*/
 .produit::after {
   content: "";
   clear: none;
@@ -196,14 +148,6 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-/* .footer {
-   background-color: #0099cc;
-   color: #ffffff;
-   text-align: center;
-   font-size: 12px;
-   padding: 15px;
- }*/
-/* For mobile phones: */
 [class*=col-] {
   width: 100%;
 }
