--- a/scss/file.scss
+++ b/scss/file.scss
@@ -21,11 +21,13 @@
     padding: 15px;
     //background-image: url("./skate.png");
     margin-bottom: 20px;
-    opacity: 0.7;
+    opacity: 0.5;
 
   }
   .menupro{
-    background-color:white; 
+    background-color:#f2f2f2; 
+  
+   
   }
   .menuh{
     //border: 1px solid red;
@@ -49,19 +51,20 @@
         font-size: 20px;
     }
     .signup{
-        border: 2px solid gray;
+        border: 3px solid white;
         text-align: center;
+        color: white;
         background-color: transparent;
         border-radius: 7px;
-      
+        opacity: 0.5;
     }
     .signupba{
       border: 2px solid gray;
       padding-right: 5px;
-      
       text-align: center;
       background-color: transparent;
       border-radius: 7px;
+      opacity: 0.5;
     }
     .signupbc{
       border: 2px solid gray;
@@ -69,88 +72,30 @@
       text-align: center;
       background-color: #170a8b;
       border-radius: 7px;
+      opacity: 0.5;
     
     }
   }
-  .menucreate{
-    //border: 1px solid black;
-    font-size: 1.0em;
-    color: black-500;
-    .signupb{
-      padding: 10px;
-      margin-right: 5px;
-    }
-    .signupb{
-      padding: 10px;
-      margin-right: 5px;
-     // background-color: blue;
-    }
-  }
- /* .navbar{
-  //  border: 1px solid black;
-    height: 300px;
-    margin:10px 90px 10px 90px;
-    .navT{
-        margin:10px 10px 10px 10px;
-        //margin-left: 30px;
-       // margin-right: 30px;
-       // border: 2px solid red;
-        height: 150px;
-        display: flex;
-        gap: 20px;
-        .navl{
-            ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-            }
-              
-            li {
-                float: left;
-            }
-              
-            li a {
-                display: block;
-                color:  white;      //solid #9933cc;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-            li a:hover {
-                background-color: red;
-                color: white;
-            }
-            .topnav-right {
-                float: right;
-            }
-        }
-  
-       /* a{
-            font-size: 10px;
-            color:rebeccapurple ;
-            display: inline-block;
-            text-align: center;
-            justify-content: space-between;
-        }
-        .guide{
-          
-            margin:Opx 50px 0px 50px;
-        }//
-        
-
-    }
-  }*/
 
   .menup{
     border-radius: O 5px 5px Opx;
-    img{
-        object-fit: contain;
+    //border: 1px solid yellow;
+    .menupimg{
+      border-top: 2px solid #a79c9ccc;
+      border-left: 2px solid #a79c9ccc;
+      border-right: 2px solid #a79c9ccc;
+      border-radius: 5px 5px 0px 2px ;
+      box-shadow: 0px  grey;
+      img{
+        object-fit: fill;
+        margin: 0 auto;
+      }
     }
+   
     .menupa{
         border: 1px solid rgb(167, 162, 162);
         padding: 0 auto;
-        box-shadow: 0px 3px 3px 2px grey;
+        box-shadow: 0px 3px 3px 0px grey;
         border-radius: 0px 0px 5px 5px;
     }
 }
@@ -158,8 +103,14 @@
     color: black;
     text-align: center;
     padding: 0px;
+    background-color: white;
   }
-  .imgp{
+  .productf {
+    color: black;
+    text-align: center;
+    padding: 0px;
+  }
+  /*.imgp{
     float: left;
     width: 100%;
     padding: 0px;
@@ -169,7 +120,7 @@
         width: 100%;
         object-fit: contain;
     }
-  }
+  }*/
   .produit::after{
     content: "";
     clear: none;
@@ -203,15 +154,7 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
   
- /* .footer {
-    background-color: #0099cc;
-    color: #ffffff;
-    text-align: center;
-    font-size: 12px;
-    padding: 15px;
-  }*/
-  
-  /* For mobile phones: */
+
   [class*="col-"] {
     width: 100%;
   }
