--- a/css/file.css
+++ b/css/file.css
@@ -89,6 +89,7 @@
   padding: 0 auto;
   box-shadow: 0px 3px 3px 0px grey;
   border-radius: 0px 0px 5px 5px;
+  opacity: 0.5;
 }
 
 .product {
@@ -102,6 +103,7 @@
   color: black;
   text-align: center;
   padding: 0px;
+  opacity: 0.5;
 }
 
 /*.imgp{
