--- a/scss/file.scss
+++ b/scss/file.scss
@@ -29,6 +29,7 @@
    // opacity: 0.5;
    
   }
+
   .menuh{
     //border: 1px solid red;
     font-size: 1.0em;
@@ -79,7 +80,7 @@
 
   .menup{
     border-radius: O 5px 5px Opx;
-    //border: 1px solid yellow;
+   
     .menupimg{
       border-top: 2px solid #a79c9ccc;
       border-left: 2px solid #a79c9ccc;
@@ -97,6 +98,7 @@
         padding: 0 auto;
         box-shadow: 0px 3px 3px 0px grey;
         border-radius: 0px 0px 5px 5px;
+        opacity: 0.5;
     }
 }
   .product {
@@ -109,6 +111,7 @@
     color: black;
     text-align: center;
     padding: 0px;
+    opacity: 0.5;
   }
   /*.imgp{
     float: left;
@@ -175,6 +178,7 @@
     .col-12 {width: 100%;}
   }
 
+ 
 
 
 
